[package]
name = "reqforge"
version = "0.1.0"
description = "ReqForge - Config-based HTTP automation engine"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reqforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "zstd", "http2", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"
chrono = "0.4.42"
base64 = "0.22.1"
sha2 = "0.10.9"
uuid = { version = "1.19.0", features = ["v4"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
md4 = "0.10.2"
rhai = "1.23.6"
urlencoding = "2.1"
regex = "1.11.1"
hex = "0.4.3"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
num-bigint = "0.4"
num-traits = "0.2"
hkdf = "0.12"
htmlescape = "0.3"
rsa = "0.9"
wreq = { version = "6.0.0-rc.21", features = ["cookies", "gzip", "brotli", "deflate", "zstd", "multipart"] }
wreq-util = "3.0.0-rc.7"
mime = "0.3"
memmap2 = "0.9.4"
async-channel = "2.2.0"
futures = "0.3"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
lazy_static = "1.5.0"

